fixed issue with filter close button reseting dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -346,10 +346,12 @@ a {
 }
 
 .pk3 {
-  align-self: flex-start;
+  /* align-self: flex-start;
   width: 3rem;
   height: 3rem;
-  margin: 2rem 2rem;
+  margin: 2rem 2rem; */
+  height: 100%;
+  width: 100%;
 }
 
 .filter_w button:nth-of-type(1) {
@@ -420,21 +422,27 @@ a {
 
 .filter_w button:nth-of-type(17) {
   background: #E1B237;
-
-
 }
 
 .filter_w button:nth-of-type(18) {
   background: #2A4950;
-
-
 }
 
 .filter_w button:nth-of-type(19) {
   background: #00A0E4;
-
-
 }
+
+.filterCloseBtn {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  align-self: flex-start;
+  width: 3rem;
+  height: 3rem;
+  margin: 2rem 2rem;
+}
+
+
 
 
 .filter_w button {
@@ -545,12 +553,12 @@ button {
     margin: -3rem 2rem 0 3rem;
   }
 
-  .pk3 {
-    align-self: flex-start;
+  /* .pk3 {
+     align-self: flex-start;
     width: 3rem;
     height: 3rem;
-    margin: -2rem 2rem 0 0;
-  }
+    margin: -2rem 2rem 0 0; 
+  } */
 
   .filter_w button:nth-of-type(1) {
 
